--- a/src/app/app.html
+++ b/src/app/app.html
@@ -42,7 +42,7 @@
 
       <!-- Address Group -->
       <div class="col-12">
-        <fieldset class="border rounded p-3" formGroupName="address">
+        <fieldset class="border rounded p-3">
           <legend class="float-none w-auto px-2 fs-6 text-muted mb-2">Address</legend>
           <div class="row g-3">
             <div class="col-12 col-md-8">
